# Physical-AI-Textbook-with-RAG

./: .gitignore  .lychee.toml  AGENTS.md  CLAUDE.md  Quick-Start-Guide.md  README.md  constitution.md  docker-compose.yaml
.codex/prompts/: sp.adr.md  sp.analyze.md
.github/workflows/: cd-demo.yml  ci.yml  pages.yml
.qwen/commands/: sp.adr.toml  sp.analyze.toml
.specify/: config.yaml
.specify/templates/: adr-template.md
auth/: index.ts  package-lock.json  package.json
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: agents.py  auth_middleware.py  chat.py  health.py  ingest.py  personalize.py  profile.py  translate.py
backend/app/db/: pool.py  queries.py
backend/app/services/: chunker.py  embedder.py  ingestion.py  rag.py
backend/docs/: rollback-procedure.md
backend/tests/golden/: golden_set.json  run_benchmark.py
fallback/: index.html
frontend/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
frontend/docs/module-1-ros2/: week-01-ros2-fundamentals.mdx  week-02-ros2-advanced.mdx  week-03-ros2-tooling.mdx  week-04-ros2-navigation.mdx  week-05-ros2-capstone.mdx
frontend/docs/module-2-simulation/: week-06-gazebo.mdx  week-07-unity.mdx
frontend/docs/module-3-nvidia-isaac/: week-08-isaac-sim.mdx  week-09-isaac-ros.mdx  (+1 more)
specs/1-specify/: spec.md
specs/2-plan/: data-model.md  plan.md
specs/3-tasks/: benchmark-results.md  demo-script.md  health-check-evidence.txt  tasks.md  urdu-review.md
(+25 files in other folders)
